<resources>
    <string name="app_name">electchain</string>
    <string name="electchain">ElectChain</string>
    <string name="enter_mobile_number">Enter your registered mobile number</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="voter_id">Voter Id</string>
    <string name="dob">Date of Birth</string>
    <string name="election">Election</string>
    <string name="candidate">Candidate</string>
    <string name="account">My Account</string>
    <string name="cast_your_vote">Cast your Vote</string>
    <string name="no_of_votes">No. of Votes:</string>
    <string name="total_no_of_votes">Total no. of Votes: </string>
    <string name="voting_completed">Voting completed till now...</string>
    <string name="no_of_user_who_voted">No. of users who voted: </string>
    <string name="total_no_of_registered_users">Total no. of registered users: </string>
    <string name="voting_has_now_nended_n_nstay_tuned_to_get_results">Voting has now ended.Stay tuned to get results.</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="voting_end_at">Voting end at</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="vote">Vote</string>
    <string name="your_vote_hase_been_registered_stay_tuned_to_get_results">Your vote hase been registered. Stay tuned to get results.</string>
    <string name="voter">Voter</string>
    <string name="admin">Admin</string>
    <string name="password">Password</string>
    <string name="enter_voter_id">Enter your Voter id</string>
    <string name="add_candidate">Add Candidate</string>
    <string name="phase">Phase</string>
    <string name="new_registration">New Registration</string>
    <string name="registration">Registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email:</string>
    <string name="electchain_admin">Electchain Admin</string>
    <string name="register_new_user">Register New User</string>
    <string name="change_phase">Change Phase</string>
    <string name="current_phase">Current Phase</string>
    <string name="new_candidate">New Candidate</string>
    <string name="submit">Submit</string>
    <string name="campaign_description">Campaign Description</string>
    <string name="enter_otp">Enter otp to verify your mobile number</string>
    <string name="_1_dec_2021_5_00_pm">1 Dec 2021 5:00 PM</string>
    <string name="result">Result</string>
    <string name="result_not_declared">Result not declared</string>
    <string name="the_winner_is">The winner is</string>
    <string name="check_result">Check Result</string>
</resources>