<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_winner_is"
            android:textStyle="bold"
            android:textColor="#DA32BC2C"
            android:textSize="50sp" />
        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/result_not_declared"
            android:textStyle="bold"
            android:textColor="#DAE85E5E"
            android:textAlignment="center"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/btnCheckResult"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/red_rounded_rectangle_button"
            android:text="@string/check_result"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />
    </LinearLayout>

</FrameLayout>