<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:background="@color/background_color">

    <include
        android:id="@+id/titleBar"
        layout="@layout/title_bar" />

    <include
        android:layout_height="100dp"
        android:layout_width="100dp"
        layout="@layout/logo_name"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_mobile_number"
            android:layout_marginTop="80dp"
            android:textSize="20sp"
            android:textColor="#A45C5C5C" />
        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:inputType="phone" />
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/red_rounded_button"
            android:textColor="#FFF"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/next"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tvRegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:letterSpacing="0.05"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            tools:targetApi="lollipop" />
    </LinearLayout>

</LinearLayout>