<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ElectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voting_end_at"
            android:textSize="21sp"
            android:textColor="#DAE85E5E"/>

        <TextView
            android:id="@+id/tvVotingDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_dec_2021_5_00_pm"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_marginStart="5dp"
            android:textColor="#DAE85E5E"/>

    </LinearLayout>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_vote_purple"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginBottom="160dp">
        <Button
            android:id="@+id/votingBtn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/cast_your_vote"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#FFF"
            android:background="@drawable/red_rounded_button" />
    </LinearLayout>

</LinearLayout>