<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_registration"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="#DA166113"
                android:textSize="28sp"
                android:layout_marginBottom="20dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,TextFields,UnusedAttribute"
                    android:paddingStart="20dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,TextFields,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,TextFields,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerVoterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/voter_id"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/red_rounded_button"
                android:textColor="#FFF"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/register"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>