<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddCandidateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_candidate"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#DA166113"
            android:textSize="28sp"
            android:layout_marginBottom="20dp" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/profile_photo_circular_background_green"
            android:src="@drawable/ic_admin"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/candidate_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCandidateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#9C8A8A8A"
                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/campaign_description">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCampaignDescription"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:backgroundTint="#9C8A8A8A"
                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/submit"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:letterSpacing="0.13"
            android:background="@drawable/red_rounded_rectangle_button" />
    </LinearLayout>

</FrameLayout>