<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/titleBar"
            layout="@layout/title_bar" />

        <include
            android:layout_height="100dp"
            android:layout_width="100dp"
            layout="@layout/logo_name"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,TextFields,UnusedAttribute"
                    android:paddingStart="20dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,TextFields,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerEmailAddressName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,TextFields,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/registerVoterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/voter_id"
                    android:backgroundTint="#9C8A8A8A"
                    android:textSize="17sp"
                    android:inputType="text"
                    android:paddingTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingBottom="25dp"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/red_rounded_button"
                android:textColor="#FFF"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/register"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom|center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>