<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VoterLoginActivity"
    android:orientation="vertical"
    android:background="@color/background_color">

    <include
        android:id="@+id/titleBar"
        layout="@layout/title_bar_return" />

    <include
        android:layout_height="100dp"
        android:layout_width="100dp"
        layout="@layout/logo_name"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_mobile_number"
            android:layout_marginTop="80dp"
            android:textSize="20sp"
            android:textColor="#A45C5C5C" />
        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_voter_id"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:textColor="#A45C5C5C" />
        <EditText
            android:id="@+id/etVoterId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_rounded_button"
        android:textColor="#FFF"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        android:textSize="30sp" />
</LinearLayout>