<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/userPhoto"
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:src="@drawable/ic_person"
            android:background="@drawable/profile_photo_circular_background_green"
            android:padding="20dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electchain_admin"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="28sp" />
            <TextView
                android:id="@+id/tvEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="22sp"
                android:textColor="#74000000"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/red_rounded_button"
                android:text="@string/logout"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:letterSpacing="0.11"
                tools:targetApi="lollipop" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>